<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.MovieDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/content_margin">

        <ImageView
            android:id="@+id/img_movie_banner"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            tools:background="@color/colorPrimaryDark"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img_movie_poster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="70dp"
            android:scaleType="fitXY"
            app:riv_border_color="@color/white"
            app:riv_border_width="2dp"
            app:riv_corner_radius="6dp"
            tools:background="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="140dp"
            android:layout_toEndOf="@id/img_movie_poster">

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Toy Story 4" />

            <TextView
                android:id="@+id/tv_movie_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_title"
                android:layout_marginStart="8dp"
                android:textColor="@color/sandyBrown"
                tools:text="9.8" />

            <ImageView
                android:id="@+id/img_star"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/tv_movie_title"
                android:layout_toEndOf="@id/tv_movie_rate"
                android:contentDescription="@string/icon_star"
                android:src="@drawable/ic_star"
                android:tint="@color/sandyBrown" />

            <TextView
                android:id="@+id/tv_movie_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_star"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/dustyGrey"
                tools:text="Action / Comedy / Adventure" />

            <TextView
                android:id="@+id/tv_movie_runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_genres"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/dustyGrey"
                android:textSize="12sp"
                tools:text="1h 20m" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_movie_poster"
            android:layout_margin="16dp"
            tools:text="As the Avengers and their allies have continued to protect the world from threats too large for any " />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_movie_overview"
            android:layout_margin="12dp"
            android:background="@color/alto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_date_label"
                    style="@style/MovieDetailTextStyle"
                    android:text="@string/released_date" />

                <TextView
                    android:id="@+id/tv_movie_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="December 12, 2019" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_director_label"
                    style="@style/MovieDetailTextStyle"
                    android:text="@string/director" />

                <TextView
                    android:id="@+id/tv_movie_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="John Abraham" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_actor_label"
                    style="@style/MovieDetailTextStyle"
                    android:text="@string/actors" />

                <TextView
                    android:id="@+id/tv_movie_actor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Actor" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
